fix overflow when filename is too long
Overflow added a scrollbar. Now it just gets hidden

--- a/data/public/static/css/manage.css
+++ b/data/public/static/css/manage.css
@@ -22,5 +22,6 @@
 
 .box-content {
     max-height: 75vh;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
